Clean-up js, fix line overlap on browser resize, and introduce versioning into style url parameters

--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,11 @@ h1 strong {
 	font-weight: 900;
 }
 h2 {
-	line-height: 20px;
 	margin: 0;
 	color: #121d1f;
 	font-weight: 400;
 	margin-bottom: 30px;
-	font-size: 34px;
+	font-size: 1.75em;
 }
 h3, h4 {
 	color: #121d1f;
@@ -75,7 +74,7 @@ ul, ol {
 }
 hr {
 	/*height: 4px;*/
-	width: 70%;
+	width: 95%;
 	text-align: center;
 	position: relative;
 	/* background: #7bc3d1;*/
